# py-web-utils

./: .gitignore  CHANGELOGS.md  README.md  USAGE.md  pyproject.toml  requirements.txt
docs/: scripts.md
src/webscripts/app/urltitlextr/: main.py
src/webscripts/core/: utils.py
src/ytscripts/yt_obtain_url/: main.py
tests/: async-test-1.py  benchmark-communicate.py  benchmark-for-loop.py  benchmark-real-time.py
