[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name='yt-scripts'
version='0.1.0'
description="Collection of useful webscraper CLI utilities powered by BeautifulSoup, with this being based around video title searches and obtaining information via HTML Parsing"
authors = [
    { name="Thanatisia", email="55834101+Thanatisia@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 3 - Alpha',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',

    # Pick your license as you wish
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here.
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    # List your dependencies here
    "pyright",
    "requests",
    "beautifulsoup4"
]

[project.scripts]
# Program Entry Point(s) and scripts
yt-obtain-url = "ytscripts.yt_obtain_url.main:main"

[project.urls]
Homepage = "https://github.com/Thanatisia/py-webscraper-yt"
Repository = "https://github.com/Thanatisia/py-webscraper-yt.git"

[tools.setuptools.packages.find]
where = ["src"]


